#21843. Remove old OS X bundling gradle tasks using gradle-macappbundle plugin.