@@ -1,4 +1,3 @@
-apply plugin: 'macAppBundle'
 apply plugin: 'cayenne'
 
 dependencies {
@@ -123,64 +122,13 @@ cayenne {
 	destDir = file ("${projectDir}/src/main/java")
 }
 
-macAppBundle {
-	appOutputDir = 'distributions/macosx'
-	creatorCode = "ishS"
-	// backgroundImage = "${projectDir}/src/packaging/macosx/dmg.background.png"
-	mainClassName = "ish.oncourse.server.AngelServer"
-	appName = "onCourseServer"
-	volumeName = "onCourseServer"
-	dmgName = "onCourseServer"
-	bundleExecutable = 'onCourseServer'
-	bundleAllowMixedLocalizations = false
-	icon = "${projectDir}/src/packaging/macosx/onCourseServer.icns"
-	jvmVersion = "${sourceCompatibility}+"
-
-	if (project.hasProperty('osxKeychainPassword')) {
-		certIdentity = project.osxKeychainIdentity
-    	keyChain = project.osxKeychain
+task installer_osx(dependsOn: [fatJar, prepareKeychains], type: au.com.ish.AppBundlerTask) {
+    description "Create the OSX application executable and installer (which is just a dmg file)."
+    doFirst {
+        logger.lifecycle("Creating the OSX application executable and installer (which is just a dmg file) for $project.name")
     }
-
-	//java properties
-	javaProperties.put("apple.awt.textantialiasing", "true")
-	javaProperties.put("JFileChooser.appBundleIsTraversable", "true")
-	javaProperties.put("JFileChooser.packageIsTraversable", "true")
-	javaProperties.put("apple.awt.antialiasing", "true")
-	javaProperties.put("apple.awt.showGrowBox", "true")
-
-	arguments.add("-Xmx" + "${project.maxmemoryServer}")
-	arguments.add("-XX:MaxPermSize=" + "${project.maxpermgenServer}")
-
-	def Map dict = new HashMap();
-	dict.put ("CFBundleTypeName", "onCourse server data file")
-	dict.put ("CFBundleTypeRole", "Editor")
-	dict.put ("CFBundleTypeIconFile", "onCourseDocument.icns")
-	dict.put ("CFBundleTypeExtensions", ["iocdata"])
-	dict.put ("CFBundleTypeOSTypes", ["ishS"])
-	dict.put ("LSTypeIsPackage", "true")
-
-	bundleExtras.put("CFBundleDocumentTypes", [dict])
-}
-
-
-task bundle_osx(dependsOn: createApp) {
-	description "Create the OSX application executable."
-	doFirst {
-		logger.lifecycle("Creating the OSX application executable for $project.name")
-	}
-}
-
-codeSign.dependsOn(prepareKeychains)
-
-task installer_osx(dependsOn: [codeSign, createDmg]) {
-	description "Create the OSX installer (which is just a dmg file)."
-	doFirst {
-		logger.lifecycle("Creating the OSX installer (which is just a dmg file) for $project.name")
-	}
-}
-
-task installer_osx_java7(dependsOn: [fatJar, prepareKeychains], type: au.com.ish.AppBundlerTask) {
-    distributionPath = "${distsDir}/macosx_java7"
+    
+    distributionPath = "${distsDir}/macosx"
     appName = "onCourseServer"
     appIdentifier = "ish.oncourse"
     mainClassName = "ish.oncourse.server.AngelServer"
